Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3530

HTTP/2 memory leak with headers and more...

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.3.0
    • 5.3.0, 6.0.0
    • HTTP/2
    • None

    Description

      I am seeing a memory leak with the headers when HTTP/2 is enabled.

      Memory allocation dump:

           allocated      |        in-use      | type size  |   free list name
      --------------------|--------------------|------------|----------------------------------         
               1827405824 |         1827340288 |       2048 | memory/hdrStrHeap
               2101346304 |         2101229568 |       2048 | memory/hdrHeap
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: