TS-3530: HTTP/2 memory leak with headers and more...

(cherry picked from commit bc2ae5a8dbcfe75b60d419190d1ee7dadae26d68)